--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     alias(libs.plugins.android.application)
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -29,7 +32,8 @@ android {
 }
 
 dependencies {
-
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:34.4.0')
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
@@ -37,4 +41,8 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation 'com.google.firebase:firebase-auth:21.0.5'  // Firebase Authentication
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'  // Google Sign-In
 }
+
+apply plugin: 'com.google.gms.google-services'  // Aplica el plugin de Google Services al final del archivo
