Mis Paquetes y Perfil

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.CAMERA" />
+
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +17,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Holdy">
+
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -27,7 +45,19 @@
         <activity
             android:name=".RegistrarteActivity"
             android:exported="true" />
+        <activity
+            android:name=".PerfilActivity"
+            android:exported="true" />
+        <activity android:name=".CuentaActivity" />
+        <activity android:name=".EditarCuentaActivity" />
+        <activity android:name=".CambiarContrasenaPerfilActivity" />
+
+        <activity android:name=".RecuperarEmailActivity" />
         <activity android:name=".InicioActivity"/>
+        <activity android:name=".MisPaquetesActivity" />
+        <activity android:name=".PaqueteAmazonActivity" />
+        <activity android:name=".NuevoPaqueteActivity" />
+
 
     </application>
 
