--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-    alias(libs.plugins.android.application)
-    // Add the Google services Gradle plugin
-    id 'com.google.gms.google-services'
 
+    alias(libs.plugins.android.application)
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -15,8 +14,13 @@ android {
         targetSdk 36
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     buildTypes {
@@ -25,25 +29,35 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
 }
 
 dependencies {
-    // Import the Firebase BoM
+    // Firebase
     implementation platform('com.google.firebase:firebase-bom:34.4.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+
+
+
     implementation libs.appcompat
     implementation libs.material
-    implementation libs.activity
     implementation libs.constraintlayout
-    implementation libs.firebase.firestore
+    implementation libs.activity
+    implementation libs.firebase.database
+    implementation libs.firebase.storage
+
+    constraints {
+        implementation('androidx.activity:activity:1.9.0')
+
+    }
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation 'com.google.firebase:firebase-auth:21.0.5'  // Firebase Authentication
-    implementation 'com.google.android.gms:play-services-auth:20.0.1'  // Google Sign-In
-}
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
-apply plugin: 'com.google.gms.google-services'  // Aplica el plugin de Google Services al final del archivo
+
+}
