--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
 
     <uses-feature
@@ -14,10 +19,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/holdy_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/holdy_icon_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Holdy">
 
 
@@ -59,7 +63,19 @@
         <activity android:name=".MisPaquetesActivity" />
         <activity android:name=".PaqueteAmazonActivity" />
         <activity android:name=".NuevoPaqueteActivity" />
+        <activity android:name=".NotificacionActivity" />
+        <activity android:name=".CamaraActivity" />
+        <activity android:name=".MapActivity" />
+        <activity android:name=".PreferenciasActivity" />
+        <activity android:name=".AyudaActivity" />
 
+        <receiver
+            android:name=".ReminderReceiver"
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
     </application>
 
