--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
     implementation 'com.google.android.gms:play-services-location:21.3.0'
-    implementation "com.google.mlkit:image-labeling:17.0.8"
+    implementation("com.google.android.gms:play-services-mlkit-image-labeling:16.0.8")
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
 
 
